Update help page

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -215,7 +215,12 @@
                                             <li>Works as Design</li>
                                         </ul>
                                 </ul>
-
+                            <li>Custom Field Excluded: </li>
+                                <ul>
+                                    <li>Resolution: External Limitation</li>
+                                    <li>TFCC IS Root Cause: Test Data</li>
+                                    <li>Issue is closed</li>
+                                </ul>
                         </ul>
                     </div>
 
