update guide info

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -221,6 +221,13 @@
                                     <li>TFCC IS Root Cause: Test Data</li>
                                     <li>Issue is closed</li>
                                 </ul>
+                            <li>Workflow Metatype</li>
+                                We also provide different scope of JIRAs based on Workflow Metatype property as follow:
+                                <ul>
+                                    <li>Include UAT: JIRAs with Workflow Metatype as UAT are counted</li>
+                                    <li>Exclude UAT: JIRAs with Workflow Metatype as UAT are not counted</li>
+                                    <li>Only UAT: JIRAs with Workflow Metatype as UAT are only counted</li>
+                                </ul>
                         </ul>
                     </div>
 
