--- a/ceeq/apps/projects/templates/projects_start.html
+++ b/ceeq/apps/projects/templates/projects_start.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %} Projects {% endblock %}
 
-{% block body %}
+{% block subnav %}
     <br><br>
     <div class="container">
         <ul id="subnav-tabs" class="nav nav-tabs">
@@ -13,7 +13,9 @@
             {% endif %}
         </ul>
     </div>
+{% endblock %}
 
+{% block body %}
     <div class="container">
         <div class="tab-content">
             <div class="tab-pane" id="projects">
