Remove complete projects from bar graph

--- a/ceeq/apps/projects/templates/score_overall.html
+++ b/ceeq/apps/projects/templates/score_overall.html
@@ -1,6 +1,6 @@
 {% block body %}
 
-    {% if projects %}
+    {% if projects_active %}
         <div id="score_container" style="width: 80%; height: 400px;"></div>
     {% else %}
         <p>No project available</p>
