--- a/ceeq/apps/projects/templates/projects.html
+++ b/ceeq/apps/projects/templates/projects.html
@@ -134,9 +134,7 @@
                 </table>
             </div>
         {% else %}
-        <small><i class="fa fa-pencil"></i> Create a <a href="{% url 'project_new' %}"> New Project </a>
-        </small>
-        <p>No projects available</p>
+            <p>No archived projects available</p>
         {% endif %}
     </div>
 </div>
