--- a/ceeq/apps/projects/templates/projects/projects_start.html
+++ b/ceeq/apps/projects/templates/projects/projects_start.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="tab-content">
             <div class="tab-pane" id="projects">
-                {% include 'projects.html' %}
+                {% include 'projects/projects.html' %}
             </div>
 
             <div class="tab-pane" id="score_overall">
@@ -40,6 +40,6 @@
 
 {% block footer %}
     <script>
-        {% include 'project.js' %}
+        {% include 'projects/project.js' %}
     </script>
 {% endblock %}
