--- a/ceeq/apps/projects/templates/sub_component/project_sub_component_platform.html
+++ b/ceeq/apps/projects/templates/sub_component/project_sub_component_platform.html
@@ -31,6 +31,6 @@
         $.getJSON("{% url 'fetch_subcomponents_pie_component' project.id %}?component_type={{ component_type }}&uat_type={{ uat_type }}").done(function(data){
             draw_pie_chart_graph(data, '{{ uat_type }}');
         });
-        {% include 'project_sub_components.js' %}
+        {% include 'sub_component/project_sub_components.js' %}
     </script>
 {% endblock %}
