Rewrite archive/activate project

--- a/ceeq/apps/projects/templates/project_detail/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail.html
@@ -37,15 +37,21 @@
                 </div>
                 <div class="row" style="margin-bottom: 10px;">
                     <div class="col-md-1"></div>
-                    <div class="col-md-2" style="text-align: left;font-size:18px;">Active</div>
-                    <div class="col-md-1">{{ form.active }}</div>
-                    <div class="col-md-7">Flag to track JIRA Project.</div>
-                </div>
-                <div class="row" style="margin-bottom: 10px;">
-                    <div class="col-md-1"></div>
-                    <div class="col-md-2" style="text-align: left;font-size:18px;">Complete</div>
-                    <div class="col-md-1">{{ form.complete }}</div>
-                    <div class="col-md-7">Flag to show CEEQ Project completed.</div>
+                    <div class="col-md-2" style="text-align: left;font-size:18px;">Project Action</div>
+                    <div class="col-md-2">
+                        {% if project.active %}
+                            <a href="{% url 'project_track' project.id %}" title="UnTrack JIRA Project"><b> UnTrack JIRA Project</b></a>
+                        {% else %}
+                            <a href="{% url 'project_track' project.id %}" title="Track JIRA Project"><b> Track JIRA Project</b></a>
+                        {% endif %}
+                    </div>
+                    <div class="col-md-2">
+                        {% if project.complete %}
+                            <a href="{% url 'project_archive' project.id %}" title="Reactivate Project"><b> Reactivate JIRA Project</b></a>
+                        {% else %}
+                            <a href="{% url 'project_archive' project.id %}" title="Archive Project"><b> Archive JIRA Project</b></a>
+                        {% endif %}
+                    </div>
                 </div>
             {% else %}
                 <div class="row" style="margin-bottom: 10px;">
