--- a/ceeq/apps/projects/templates/project_detail/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail.html
@@ -139,9 +139,9 @@
             <div class="row">
                 <legend>Components Percentage to CEEQ Score</legend>
                 <ul id="subnav-tabs" class="nav nav-tabs">
-                    <li><a href="#include_uat" data-toggle="tab">Include UAT</a> </li>
-                    <li><a href="#exclude_uat" data-toggle="tab">Exclude UAT</a> </li>
-                    <li><a href="#only_uat" data-toggle="tab">Only UAT</a> </li>
+                    <li><a href="#include_uat" data-toggle="tab">Overall</a> </li>
+                    <li><a href="#exclude_uat" data-toggle="tab">Internal Testing</a> </li>
+                    <li><a href="#only_uat" data-toggle="tab">UAT</a> </li>
                 </ul>
             </div>
             <div class="tab-content">
