enlarge no UAT JIRAs message

--- a/ceeq/apps/projects/templates/project_detail/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail.html
@@ -196,7 +196,7 @@
 
         if (data_only_uat[3] == 103 ) {
             $('#component_percentage_pie_chart_only_uat').hide();
-            $('#export_data_only_uat').html('No Issues Open.');
+            $('#export_data_only_uat').html('<br><font size=\'4\'><b>No UAT JIRA Issues Found.</b></font>');
         }
     </script>
 
