update 'voice slots' representation to 'voice prompts'

--- a/ceeq/apps/defects_density/templates/dd_list_single.html
+++ b/ceeq/apps/defects_density/templates/dd_list_single.html
@@ -33,7 +33,7 @@
                         <td style="text-align: center"><strong>Platform</strong></td>
                         <td style="text-align: center"><strong>Reports</strong></td>
                         <td style="text-align: center"><strong>Application</strong></td>
-                        <td style="text-align: center"><strong>Voice Slots</strong></td>
+                        <td style="text-align: center"><strong>Prompts</strong></td>
                         <td style="text-align: center"><strong>Del</strong></td>
                     </tr>
                 </thead>
