--- a/ceeq/apps/defects_density/templates/dd_detail.html
+++ b/ceeq/apps/defects_density/templates/dd_detail.html
@@ -61,7 +61,7 @@
             </div>
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-1"></div>
-                <div class="col-md-2" style="text-align: left;font-size: 18px;">Voice Slots</div>
+                <div class="col-md-2" style="text-align: left;font-size: 18px;">Prompts</div>
                 <div class="col-md-8">{{ form.voiceSlots }}</div>
             </div>
 
