update guide page

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -104,49 +104,50 @@
                         <ul>
                             <li>Application - 0.40</li>
                                 <ul>
+                                    <li>Code</li>
+                                    <ul>
+                                        <li>Code</li>
+                                        <li>KVPs</li>
+                                    </ul>
                                     <li>Design</li>
                                     <ul>
                                         <li>Feature</li>
                                         <li>VUI</li>
                                     </ul>
-                                    <li>App Code</li>
-                                    <ul>
-                                        <li>Code</li>
-                                        <li>KVPs</li>
-                                    </ul>
-                                    <li>Web Service</li>
                                     <li>Grammars</li>
+                                    <li>Web Service</li>
                                 </ul>
                             <li>CXP - Customer Experience Portal - 0.10</li>
                                 <ul>
-                                    <li>Real Feed</li>
-                                    <li>ODP - On Demand Portal</li>
                                     <li>HCCP - Host Customer Contact Portal</li>
+                                    <li>ODP - On Demand Portal</li>
+                                    <li>Real Feed</li>
                                     <li>User Portal</li>
                                 </ul>
-                            <li>Infrastructure Platform - 0.20</li>
+                            <li>Platform - 0.20</li>
                                 <ul>
+                                    <li>Components</li>
+                                    <li>Database</li>
                                     <li>Host</li>
                                     <ul>
                                         <li>WSSI</li>
                                         <li>WSO2</li>
                                     </ul>
                                     <li>Voice Browser</li>
-                                    <li>Database</li>
                                 </ul>
 
                             <li>Reports - 0.15</li>
                                 <ul>
-                                    <li>TXL/BHV Logs</li>
-                                    <li>Standard Reports</li>
-                                    <li>Custom Reports</li>
                                     <li>CDR Feeds - Client Detail Reports</li>
+                                    <li>Custom Reports</li>
+                                    <li>Standard Reports</li>
+                                    <li>TXL/BHV Logs</li>
                                 </ul>
                             <li>Voice Slots - 0.15</li>
                                 <ul>
                                     <li>English</li>
                                     <li>Spanish</li>
-                                    <li>Others</li>
+                                    <li>Other</li>
                                 </ul>
                         </ul>
 
