--- a/ceeq/apps/defects_density/templates/dd_list_single.html
+++ b/ceeq/apps/defects_density/templates/dd_list_single.html
@@ -41,7 +41,7 @@
                     {% for dd in project_dds %}
                         <tr>
                             <td class="col-sm-2" style="text-align: center">{{ dd.version }}</td>
-                            <td class="col-sm-2" style="text-align: center">{{ dd.created }}</td>
+                            <td class="col-sm-2" style="text-align: center">{{ dd.created | date:"M d, Y"}}</td>
                             <td class="col-sm-2" style="text-align: center">{{ dd.ceeq|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">{{ dd.cxp|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">{{ dd.platform|floatformat:3 }}</td>
