--- a/ceeq/apps/projects/templates/project_detail/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail.html
@@ -40,15 +40,19 @@
                     <div class="col-md-2" style="text-align: left;font-size:18px;">Project Action</div>
                     <div class="col-md-2">
                         {% if project.active %}
+                            <label for="id_active"></label><input id="id_active" name="active" type="checkbox" checked hidden>
                             <a href="{% url 'project_track' project.id %}" title="UnTrack JIRA Project"><b> UnTrack JIRA Project</b></a>
                         {% else %}
+                            <label for="id_active"></label><input id="id_active" name="active" type="checkbox" hidden>
                             <a href="{% url 'project_track' project.id %}" title="Track JIRA Project"><b> Track JIRA Project</b></a>
                         {% endif %}
                     </div>
                     <div class="col-md-2">
                         {% if project.complete %}
+                            <label for="id_complete"></label><input id="id_complete" name="complete" type="checkbox" checked hidden>
                             <a href="{% url 'project_archive' project.id %}" title="Reactivate Project"><b> Reactivate JIRA Project</b></a>
                         {% else %}
+                            <label for="id_complete"></label><input id="id_complete" name="complete" type="checkbox" hidden>
                             <a href="{% url 'project_archive' project.id %}" title="Archive Project"><b> Archive JIRA Project</b></a>
                         {% endif %}
                     </div>
