send email notification when Voice Prompts JIRAs exceed 6

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -244,8 +244,8 @@
 
                     <div id="voice_slots_percentage_range">
                         <h4 style="padding-top: 75px; margin-top: -75px;">Voice Slots Percentage Range - New approach&nbsp;&nbsp;<a href="#index"><i class="fa fa-arrow-circle-up"></i></a></h4>
-                        <p>Voice Slots has three sub components, each sub component only has 1 ‘Missing’ and 1 ‘Wrong’ issues.
-                            Issue is Open when percentage of ‘Missing’ or ‘Wrong’ reaches following range.
+                        <p>Voice Slots has three sub components: <b>English, Spanish, Other</b>, each sub component only has 1 ‘Missing’ and 1 ‘Defective’ issues.
+                            Issue is Open when percentage of ‘Missing’ or ‘Defective’ reaches following range.
                             Issue will be changed from ‘Open’ to ‘Resolved’  as ‘Trivial’ until all verbiages are cleared. </p>
                         <table class="table table-striped">
                             <thead>
@@ -268,7 +268,7 @@
                                     <td>24.10 - 100.00</td>
                                 </tr>
                                 <tr>
-                                    <td>Wrong</td>
+                                    <td>Defective</td>
                                     <td>0.00 - 3.00</td>
                                     <td>3.10 - 6.00</td>
                                     <td>6.10 - 12.00</td>
