--- a/ceeq/apps/projects/templates/projects/projects.html
+++ b/ceeq/apps/projects/templates/projects/projects.html
@@ -44,7 +44,12 @@
                                     {% elif project.score == 102 %}
                                         <a href="{% url 'project_defects_density' project.id %}">Out of Range</a>
                                     {% elif project.score == 103 %}
-                                        <a href="{% url 'project_defects_density' project.id %}"> No open issues</a>
+                                        {# No open issues#}
+                                        <a href="{% url 'project_defects_density' project.id %}"> 10.0</a>
+                                        {% if superuser %}
+                                            <i class="fa fa-indent"></i>
+                                            <a href="{% url 'defects_density_log' project.id %}" onclick="$('#throbber').show();"> Log</a>
+                                        {% endif %}
 
                                     {% elif project.score == 104 %}
                                         No JIRA Data
