enlarge qei log image

--- a/ceeq/apps/projects/templates/project_detail/project_detail_exclude_uat.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_exclude_uat.html
@@ -16,8 +16,8 @@
             {% endif %}
 
             <div id="qei_log_exclude_uat" style="text-align: center" hidden >
-                <h3><strong>{{ project.name }} - Internal Testing: 10 / 10 </strong></h3><br>
-                <img src="{{ STATIC_URL }}common/QEIPowerQ.ico" />
+                <h3><strong>{{ project.name }}</strong> - Internal Testing: 10 / 10 </h3><br>
+                <img src="{{ STATIC_URL }}common/QEIPowerQ.ico" style="width: 200px; height: 200px;" />
             </div>
 
             <br>
