--- a/ceeq/apps/projects/templates/project_detail/project_detail_only_uat.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_only_uat.html
@@ -18,8 +18,8 @@
 {% endif %}
 
 <div id="qei_log_only_uat" style="text-align: center" hidden >
-    <h3><strong>{{ project.name }} - UAT: 10 / 10 </strong></h3><br>
-    <img src="{{ STATIC_URL }}common/QEIPowerQ.ico" />
+    <h3><strong>{{ project.name }}</strong> - UAT: 10 / 10 </h3><br>
+    <img src="{{ STATIC_URL }}common/QEIPowerQ.ico" style="width: 200px; height: 200px;" />
 </div>
 
 <br>
