--- a/ceeq/apps/projects/templates/project_detail/project_detail_include_uat.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_include_uat.html
@@ -17,7 +17,7 @@
 
             <div id="qei_log_include_uat" style="text-align: center" hidden >
                 <h3><strong>{{ project.name }}</strong> - Overall: 10 / 10 </h3><br>
-                <img src="{{ STATIC_URL }}common/QEIPowerQ.ico" style="width: 200px; height: 200px;" />
+                <img src="{{ STATIC_URL }}common/QEIPowerQ.jpg" style="width: 150px; height: 150px;" />
             </div>
 
             <br>
