--- a/ceeq/apps/projects/templates/project_detail/project_detail_only_uat.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_only_uat.html
@@ -19,7 +19,7 @@
 
 <div id="qei_log_only_uat" style="text-align: center" hidden >
     <h3><strong>{{ project.name }}</strong> - UAT: 10 / 10 </h3><br>
-    <img src="{{ STATIC_URL }}common/QEIPowerQ.ico" style="width: 200px; height: 200px;" />
+    <img src="{{ STATIC_URL }}common/QEIPowerQ.jpg" style="width: 150px; height: 150px;" />
 </div>
 
 <br>
