enlarge bar graph height and update guide page

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -98,7 +98,7 @@
                     <div id="components_weight">
                         <h4 style="padding-top: 75px; margin-top: -75px;">Components Weight Factor&nbsp;&nbsp;<a href="#index"><i class="fa fa-arrow-circle-up"></i></a></h4>
                         <p>During the procedure of West developed solutions testing, the ration of following components
-                        are considered as <strong>(8 : 2 : 4 : 3 : 3)</strong> - (alphabet order)</p>
+                        are considered as <strong>(8 : 2 : 3 : 3 : 4)</strong> - (alphabet order)</p>
                         <ul>
                             <li>Application - 0.40</li>
                                 <ul>
@@ -122,7 +122,7 @@
                                     <li>Real Feed</li>
                                     <li>User Portal</li>
                                 </ul>
-                            <li>Platform - 0.20</li>
+                            <li>Platform - 0.15</li>
                                 <ul>
                                     <li>Components</li>
                                     <li>Database</li>
@@ -141,7 +141,7 @@
                                     <li>Standard Reports</li>
                                     <li>TXL/BHV Logs</li>
                                 </ul>
-                            <li>Voice Slots - 0.15</li>
+                            <li>Voice Prompts - 0.20</li>
                                 <ul>
                                     <li>English</li>
                                     <li>Spanish</li>
