--- a/ceeq/apps/users/templates/user_management.html
+++ b/ceeq/apps/users/templates/user_management.html
@@ -26,7 +26,7 @@
                             <a href="{% url 'user_management' %}?sort=last_login">
                             <strong>Last Login</strong></a>&nbsp;<i class="fa fa-sort-desc"></i>
                         {% else %}
-                            <a href="{% url 'user_management' %}?sort=last_login">
+                            <a href="{% url 'user_management' %}?sort=-last_login">
                             <strong>Last Login</strong></a>&nbsp;<i class="fa fa-sort"></i>
                         {% endif %}
                     </th>
