--- a/ceeq/apps/core/templates/landing.html
+++ b/ceeq/apps/core/templates/landing.html
@@ -10,17 +10,12 @@
 
     <div class="col-xs-3"></div>
     <div class="col-xs-6">
+        <br><br>
+        <div class="row text-center">
+            <img src="{{ STATIC_URL }}ceeq/CEEQ.jpg ">
+        </div>
         <div class="well" id="landing-well" style="margin-top: 25px;">
-            <h3 class="text-center text-muted">
-                <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-sign-in fa-stack-1x fa-inverse"></i>
-                </span>
-                <br><br>
-                Sign into <span class="text-primary">CEEQ Score</span>
-            </h3>
-            <p align="center">Comprehensive End to End Quality</p>
-            <hr>
+
             <div>
                 <form class="form" role="form" method=POST action="{% url 'sign_in' %}{% if request.GET.next %}?next={{ request.GET.next }}{% endif %}">
                     <div class="input-group" style="margin-bottom: 10px;">
@@ -33,16 +28,17 @@
                     </div>
                     <p class="help-block text-center">Please use your Active Directory credentials.</p>
                     <hr>
-                    <div class="form-group col-xs-6">
+                    <div class="row text-center">
+                        <div class="col-xs-3"></div>
+                        <div class="form-group col-xs-6" >
+                            <button type="submit" class="btn btn-primary btn-block" tabindex="4">Sign In</button>
+                        </div>
+                    </div>
 
-                    </div>
-                    <div class="form-group col-xs-6">
-                        <button type="submit" class="btn btn-primary btn-block" tabindex="4">Sign In</button>
-                    </div>
                     {% csrf_token %}
                 </form>
             </div>
-            <br><br><br>
+
         </div>
     </div>
     <div class="col-xs-3"></div>
