--- a/ceeq/apps/projects/templates/project_detail/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail.html
@@ -200,6 +200,7 @@
         var data_include_uat = {{ dd_pie_data_include_uat | safe }};
         var data_exclude_uat = {{ dd_pie_data_exclude_uat | safe }};
         var data_only_uat = {{ dd_pie_data_only_uat | safe }};
+        var data_custom = {{ dd_pie_data_custom | safe }};
 
         {% include 'project_detail/project_detail.js' %}
 
@@ -217,6 +218,11 @@
             $('#component_percentage_pie_chart_only_uat').hide();
             $('#export_data_only_uat').hide();
             $('#qei_log_only_uat').show();
+        }
+        if (data_custom[3] == 103 ) {
+            $('#component_percentage_pie_chart_custom').hide();
+            $('#export_data_custom').hide();
+            $('#qei_log_custom').show();
         }
     </script>
 
