--- a/ceeq/apps/projects/templates/project_detail/project_detail_custom.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_custom.html
@@ -5,24 +5,24 @@
     </div>
 </div>
 
-<div id="qei_log_exclude_uat" style="width: 500px; height: 300px; margin: 0 auto;" hidden></div>
+<div id="qei_log_custom" style="width: 500px; height: 300px; margin: 0 auto;" hidden></div>
 
-{% if weight_factor_exclude_uat %}
+{% if weight_factor_custom %}
     <div class="row">
-        <p style="text-align: center" id="export_data_exclude_uat">
+        <p style="text-align: center" id="export_data_custom">
             Export Graph to:
-            <button id="png_exclude_uat">PNG</button>
-            <button id="jpeg_exclude_uat">JPEG</button>
-            <button id="pdf_exclude_uat">PDF</button>
+            <button id="png_custom">PNG</button>
+            <button id="jpeg_custom">JPEG</button>
+            <button id="pdf_custom">PDF</button>
         </p>
     </div>
 {% else %}
     <div class="row">
-        <p style="text-align: center" id="export_qei_log_exclude_uat">
+        <p style="text-align: center" id="export_qei_log_custom">
             Export Graph to:
-            <button id="png_qei_log_exclude_uat">PNG</button>
-            <button id="jpeg_qei_log_exclude_uat">JPEG</button>
-            <button id="pdf_qei_log_exclude_uat">PDF</button>
+            <button id="png_qei_log_custom">PNG</button>
+            <button id="jpeg_qei_log_custom">JPEG</button>
+            <button id="pdf_qei_log_custom">PDF</button>
         </p>
     </div>
 {% endif %}
@@ -39,10 +39,10 @@
         {% endif %}
     </p>
     <p>Standard Component Names: <strong>{{ component_names_standard }}</strong></p>
-    <p>Exist Components Names: <strong>{{ component_names_exclude_uat }}</strong></p>
+    <p>Exist Components Names: <strong>{{ component_names_custom }}</strong></p>
 </div>
 
-{% if weight_factor_exclude_uat %}
+{% if weight_factor_custom %}
    <table class="table table-hover table-striped" id="factor_table" >
     <thead>
         <tr>
@@ -92,7 +92,7 @@
   </tr>
     </thead>
     <tbody>
-        {% for component,weight,dd, total, b_c, b_o, b_r, c_c, c_o, c_r, m_c, m_o, m_r, mi_c, mi_o, mi_r, t_c, t_o, t_r in weight_factor_exclude_uat %}
+        {% for component,weight,dd, total, b_c, b_o, b_r, c_c, c_o, c_r, m_c, m_o, m_r, mi_c, mi_o, mi_r, t_c, t_o, t_r in weight_factor_custom %}
             <tr>
                 <td>{{ component }}</td>
                 <td>{{ weight|floatformat:3 }}</td>
@@ -138,21 +138,21 @@
         <td></td>
         <td></td>
         <td></td>
-        <td style="text-align: center">{{ priority_total_exclude_uat.blocker }}</td>
+        <td style="text-align: center">{{ priority_total_custom.blocker }}</td>
         <td></td>
         <td></td>
-        <td style="text-align: center">{{ priority_total_exclude_uat.critical }}</td>
+        <td style="text-align: center">{{ priority_total_custom.critical }}</td>
         <td></td>
         <td></td>
-        <td style="text-align: center">{{ priority_total_exclude_uat.major }}</td>
+        <td style="text-align: center">{{ priority_total_custom.major }}</td>
         <td></td>
         <td></td>
-        <td style="text-align: center">{{ priority_total_exclude_uat.minor }}</td>
+        <td style="text-align: center">{{ priority_total_custom.minor }}</td>
         <td></td>
         <td></td>
-        <td style="text-align: center">{{ priority_total_exclude_uat.trivial }}</td>
+        <td style="text-align: center">{{ priority_total_custom.trivial }}</td>
         <td></td>
-        <td style="text-align: center">{{ priority_total_exclude_uat.total }}</td>
+        <td style="text-align: center">{{ priority_total_custom.total }}</td>
     </tr>
     </tbody>
     </table>
