date range picker works

--- a/ceeq/apps/projects/templates/project_detail/project_detail_custom.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail_custom.html
@@ -1,3 +1,10 @@
+
+<div id="report-range" class="query-field pull-right">
+    <i class="fa fa-caret-down"></i>
+    <i class="fa fa-calendar"></i>
+    <span></span>
+</div>
+
 <div id="component_percentage_pie_chart_custom" style="width: 700px; height: 600px; margin: 0 auto;">
     <div class="loading" style="text-align:center; margin-top: 100px;">
         <i class="fa fa-spinner fa-2x fa-spin"></i>
