--- a/ceeq/apps/projects/templates/project_detail/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail.html
@@ -1,6 +1,23 @@
 {% extends 'base.html' %}
-
+{% load staticfiles %}
 {% block title %}ProjectDetail{% endblock %}
+
+{% block extrahead %}
+    <link href="{% static 'common/bootstrap-daterangepicker/1.2/daterangepicker-bs3.css' %}" rel="stylesheet" type="text/css">
+    <style type="text/css">
+        .query-field {
+            background: #ffffff;
+            -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .25), inset 0 -1px 0 rgba(0, 0, 0, .1);
+            -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, .25), inset 0 -1px 0 rgba(0, 0, 0, .1);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, .25), inset 0 -1px 0 rgba(0, 0, 0, .1);
+            color: #333333;
+            padding: 8px;
+            line-height: 18px;
+            cursor: pointer;
+        }
+
+    </style>
+{% endblock %}
 
 {% block body %}
     <div class="container">
@@ -195,6 +212,11 @@
 {% endblock %}
 
 {% block footer %}
+    <script type='text/javascript' src="{% static 'common/bootstrap-daterangepicker/1.2/moment.min.js' %}"></script>
+    <script type='text/javascript' src="{% static 'common/momentjs/tz/0.2.4/moment-timezone-with-data-2010-2020.js' %}"></script>
+    <script type='text/javascript' src="{% static 'common/bootstrap-daterangepicker/1.2/daterangepicker.js' %}"></script>
+{#    <script type='text/javascript' src="{% static 'common/momentjs/moment.js' %}"></script>#}
+
     <script type="text/javascript">
         var score = parseFloat({{ project.score }});
         var data_include_uat = {{ dd_pie_data_include_uat | safe }};
@@ -203,6 +225,8 @@
         var data_custom = {{ dd_pie_data_custom | safe }};
 
         {% include 'project_detail/project_detail.js' %}
+
+        attachDateRangePicker();
 
         if (data_include_uat[3] == 103 ) {
             $('#component_percentage_pie_chart_include_uat').hide();
