filter jira data based on date range

--- a/ceeq/apps/projects/templates/project_detail/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail/project_detail.html
@@ -226,6 +226,8 @@
 
         {% include 'project_detail/project_detail.js' %}
 
+        setStartDate("{{ start }}");
+        setEndDate("{{ end }}");
         attachDateRangePicker();
 
         if (data_include_uat[3] == 103 ) {
