--- a/ceeq/apps/projects/templates/sub_component/project_sub_component_apps.html
+++ b/ceeq/apps/projects/templates/sub_component/project_sub_component_apps.html
@@ -6,7 +6,7 @@
     <div class="container">
         <br>
         <div class="row">
-            <legend>Sub Components Percentage to Application - {{ project.name }}</legend>
+            <legend>Sub Components Percentage to {{ component_type }} - {{ project.name }}</legend>
         </div>
         <div id="apps_subcomponent_percentage_pie_chart" style="width: 800px; height: 600px; margin: 0 auto;">
             <div class="loading" style="text-align: center; margin-top: 10px;">
